# bno08x

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: bno08x.h
src/: bno08x.c
